--- a/Social/Web.config
+++ b/Social/Web.config
@@ -9,9 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;Initial Catalog=aspnet-Social-20181226100157;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SocialModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;initial catalog=aspnet-Social-20181226100157;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="Entities" connectionString="metadata=res://*/SocialModel.csdl|res://*/SocialModel.ssdl|res://*/SocialModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;initial catalog=aspnet-Social-20181226100157;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;Initial Catalog=aspnet-Social-20181226100157;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SocialModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;initial catalog=aspnet-Social-20181226100157;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="metadata=res://*/SocialModel.csdl|res://*/SocialModel.ssdl|res://*/SocialModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;initial catalog=aspnet-Social-20181226100157;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/SocialModel.csdl|res://*/SocialModel.ssdl|res://*/SocialModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Social-20181226100157.mdf;initial catalog=aspnet-Social-20181226100157;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SqlConnString" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=aspnet-Social-20181226100157;integrated security=True;multipleactiveresultsets=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -19,6 +22,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off">
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -89,11 +94,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+    <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
       </parameters>
-    </defaultConnectionFactory>
+    </defaultConnectionFactory>-->
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
